--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,21 @@
-asgiref==3.5.2
-crispy-bootstrap5==0.7
-Django==4.1.3
-django-crispy-forms==1.14.0
-django-tinymce==3.5.0
-sqlparse==0.4.3
-
-gunicorn
-dj-database-url
-psycopg2
+asgiref==3.7.2
+attrs==23.1.0
+certifi==2023.11.17
+dj-database-url==2.1.0
+Django==4.2.7
+gunicorn==21.2.0
+h11==0.14.0
+idna==3.6
+outcome==1.3.0.post0
+packaging==23.2
+psycopg2-binary==2.9.9
+PySocks==1.7.1
+selenium==4.15.2
+sniffio==1.3.0
+sortedcontainers==2.4.0
+sqlparse==0.4.4
+trio==0.23.1
+trio-websocket==0.11.1
+typing_extensions==4.8.0
+urllib3==2.1.0
+wsproto==1.2.0
